csv file with results

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "google-plus-parser",
     "devDependencies": {
-        "coffee-script": "*"
+        "coffee-script": "*",
     }
 }
