--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "google-plus-parser",
   "devDependencies": {
-    "coffee-script": "*",
+    "coffee-script": "*"
   },
   "dependencies": {
       "express ": "*",
