--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
     "express": "^4.9.3",
     "bower": "^1.3.11",
     "phantomjs": "^1.9.9"
+  },
+  "scripts": {
+    "postinstall": "./node_modules/bower/bin/bower install"
   }
 }
