--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "spooky": "^0.2.4",
     "express": "^4.9.3",
     "bower": "^1.3.11",
-    "phantomjs": "^1.9.9"
+    "phantomjs": "^1.9.9",
+    "sync-request": "*"
   },
   "scripts": {
     "postinstall": "./node_modules/bower/bin/bower install"
