angular + good assets of express

--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,7 @@
 {
-    "name": "google-plus-parser",
+    "name": "web-guard",
     "devDependencies": {
-        "jquery": "*"
+        "jquery": "*",
+        "angular": "*"
     }
 }
